src/scss/base/_globals.scss
$nav-footer-max-width: 88rem;
$progress-bar-height: 6px;

html {
	text-size-adjust: none;
	padding: 0;
	margin: 0;
	width: 100vw;
	overflow-x: hidden;
	-webkit-text-size-adjust: 100%; // Prevents adjustments of font size by mobile browsers
	-ms-text-size-adjust: 100%; // For IE
}

*,
*::before,
*::after {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

body {
	font-family: "Inter", sans-serif;
	padding: 0;
	margin: 0;
	width: calc(100vw + 8px);
	text-align: left;
	background-color: white;
	overflow-x: hidden;
	overflow-y: auto;
}

/* Reset margins and padding for the HTML and body */
html,
body {
	margin: 0;
	padding: 0;
	overflow-x: hidden;
	/* Prevent horizontal overflow */
}

/* For WebKit browsers (Chrome, Safari, Edge) */
body {
	margin: 0;
	padding: 0;
	overflow-y: scroll;
	/* Ensure scrollbar is always visible */
}

::-webkit-scrollbar {
	width: 8px;
	border: none;
	/* Width of the entire scrollbar */
}

::-webkit-scrollbar-track {
	background: $lightest-grey;
	border: 0;
	/* Make the track transparent */
}

::-webkit-scrollbar-thumb {
	background-color: rgba(0, 0, 0, 0.3);
	/* Light thumb color for better visibility */
	border-radius: 4px;
	/* Rounded corners */
	transition: background-color 0.3s ease;
	/* Smooth transition */
}

::-webkit-scrollbar-thumb:hover {
	background-color: rgba(0, 0, 0, 0.5);
	/* Darker thumb on hover */
}

/* For Firefox */
* {
	scrollbar-width: thin;
	/* Make scrollbar thinner */
	scrollbar-color: $lightest-grey;
	/* Thumb color and track color */
}

*::-webkit-scrollbar-corner {
	background: transparent;
	/* Transparent corner for combined scrollbars */
}

main {
	padding: 0;
	margin: 0;
	width: 100vw;
	overflow-x: visible;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section,
summary {
	display: block;
}

hr {
	box-sizing: content-box;
	height: 0;
	border: none;
}

pre {
	font-family: monospace, monospace; // Ensures font consistency in code elements
	font-size: 1em;
}

a {
	background-color: transparent; // Removes background color
	text-decoration: none; // Removes underline
	color: #0281e3; // Link colors inherit from parent
	margin-bottom: 1rem;
	margin-top: 1.25rem;
}

abbr[title] {
	border-bottom: none; // Removes underline on abbreviations
	text-decoration: underline;
	/* 2 */
	text-decoration: underline dotted; // Adds dotted underline
}

b,
strong {
	font-weight: bolder;
}

/**
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */

code,
kbd,
samp {
	font-family: monospace, monospace;
	font-size: 1em;
}

small {
	font-size: 80%;
}

// / Prevent `sub` and `sup` elements from affecting the line height in all browsers.
sub,
sup {
	font-size: 75%;
	line-height: 0;
	position: relative;
	vertical-align: baseline;
}

sub {
	bottom: -0.25em;
}

sup {
	top: -0.5em;
}

/* Forms
   ========================================================================== */

/**
 * 1. Change the font styles in all browsers.
 * 2. Remove the margin in Firefox and Safari.
 */

button,
input,
optgroup,
select,
textarea {
	font-family: inherit;
	/* 1 */
	font-size: 100%;
	/* 1 */
	line-height: 1.15;
	/* 1 */
	margin: inherit;
}

/**
  * Show the overflow in IE.
  * 1. Show the overflow in Edge.
  */

button,
input {
	/* 1 */
	overflow: visible;
}

/**
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
  * 1. Remove the inheritance of text transform in Firefox.
  */

button,
select {
	/* 1 */
	text-transform: none;
	border: 0;
}

/**
  * Correct the inability to style clickable types in iOS and Safari.
  */

button,
[type="button"],
[type="reset"],
[type="submit"] {
	-webkit-appearance: button;
	appearance: button;
	cursor: pointer;
}

/**
  * Remove the inner border and padding in Firefox.
  */

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
	border-style: none;
	padding: 0;
}

/**
  * Restore the focus styles unset by the previous rule.
  */

button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
	outline: 1px dotted ButtonText;
}

/**
  * Correct the padding in Firefox.
  */

fieldset {
	padding: 0.35em 0.75em 0.625em;
}

/**
  * 1. Correct the text wrapping in Edge and IE.
  * 2. Correct the color inheritance from `fieldset` elements in IE.
  * 3. Remove the padding so developers are not caught out when they zero out
  *    `fieldset` elements in all browsers.
  */

legend {
	box-sizing: border-box;
	/* 1 */
	color: inherit;
	/* 2 */
	display: table;
	/* 1 */
	max-width: 100%;
	/* 1 */
	padding: 0;
	/* 3 */
	white-space: normal;
	/* 1 */
}

/**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */

progress {
	vertical-align: baseline;
}

/**
  * Remove the default vertical scrollbar in IE 10+.
  */

textarea {
	overflow: auto;
}

/**
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */

[type="checkbox"],
[type="radio"] {
	box-sizing: border-box;
	/* 1 */
	padding: 0;
	/* 2 */
}

/**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
	height: auto;
}

/**
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */

[type="search"] {
	-webkit-appearance: textfield;
	/* 1 */
	appearance: textfield;
	outline-offset: -2px;
	/* 2 */
}

/**
  * Remove the inner padding in Chrome and Safari on macOS.
  */

[type="search"]::-webkit-search-decoration {
	appearance: none;
	-webkit-appearance: none;
	/* For Safari and Chrome */
	-moz-appearance: none;
	/* For Firefox */
	-ms-appearance: none;
	/* For Internet Explorer */
}

/**
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
  */

::-webkit-file-upload-button {
	-webkit-appearance: button;
	/* 1 */
	font: inherit;
	/* 2 */
}

/* Interactive
    ========================================================================== */

/*
  * Add the correct display in Edge, IE 10+, and Firefox.
  */

details {
	display: block;
}

/*
  * Add the correct display in all browsers.
  */

summary {
	display: list-item;
}

/* Misc
    ========================================================================== */

/**
  * Add the correct display in IE 10+.
  */

template {
	display: none;
}

/**
  * Add the correct display in IE 10.
  */

[hidden] {
	display: none;
}

// Material icons
.material-icons {
	vertical-align: -14%;
}

